$Id: History,v 1.3 2000-06-19 16:06:45 stesting Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                 test18 (radiative decay) History file
                 -------------------------------------
This file should be used by the tests and/or test18 responsible to briefly
summarize all major modifications introduced in the code and keep
track of all tags.

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

19th June 2000  John Allison  (test18-V01-01-05)
- Updated test18.out for SUN debug non-ISO.

15th June 2000  John Allison  (test18-V01-01-03)
- ISO compliance.

23rd May 2000  John Allison  (test18-V01-01-00)
- First version from hadronic/models/radiative_decay/test/exrdm02.