@@ -1,4 +1,4 @@
-$Id: History,v 1.3 2000-06-19 16:06:45 stesting Exp $
+$Id: History,v 1.4 2000-06-27 14:41:25 stesting Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -14,6 +14,9 @@ track of all tags.
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+27th June 2000  John Allison  (test18-V01-01-06)
+- Added test18.large_N.in.
 
 19th June 2000  John Allison  (test18-V01-01-05)
 - Updated test18.out for SUN debug non-ISO.
